<resources>
    <string name="app_name">Watcher</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="sign_up">회원가입</string>
    <string name="log_in">로그인</string>
    <string name="sns_log_in">SNS 간편 로그인/회원가입</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="pass">건너뛰기</string>


    <string name="favorite">즐겨찾기</string>
    <string name="title_activity_member_case">MemberCase</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
